--- a/src/components/PopupProfile/PopupProfile.scss
+++ b/src/components/PopupProfile/PopupProfile.scss
@@ -10,13 +10,13 @@
   border-radius: 4px;
 }
 
-.user-popup:before {
+.user-popup::before {
   position: absolute;
   top: 21px;
   left: -9px;
   display: inline-block;
   border-top: 9px solid rgba(0, 0, 0, 0);
-  border-right: 9px solid #7b7b7b;
+  border-right: 9px solid #2d3a42;
   border-bottom: 9px solid rgba(0, 0, 0, 0);
   content: "";
 }
