--- a/src/media.scss
+++ b/src/media.scss
@@ -30,6 +30,7 @@
         width: 31px;
       }
     }
+
     .navigation-sub-list {
       display: none;
       position: absolute;
@@ -41,27 +42,9 @@
   }
 }
 
-@media screen and (max-width:880px){
-  .tasks-container {
-    order: 2;
-    width: 100%;
-  }
-
-  .task-tags-container {
-    order: 1;
-    width: 100%;
-    form {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    .tags{
-      width:100%;
-      position: relative;
-      margin-right:4px;
-    }
-
-  }}
+//@media screen and (max-width:880px) {
+//
+//}
 
 @media screen and (max-width:800px) {
   * {
@@ -74,15 +57,9 @@
     z-index: 99;
     position: fixed;
     right: 20px;
-    bottom: 0px;
+    bottom: 0;
     height: 60px;
     width: 60px;
-  }
-
-  .tasks-container {
-    align-content: center;
-    flex-flow: column wrap;
-    width:65%;
   }
   .todo-list-tools {
     display: flex;
@@ -92,24 +69,10 @@
       margin-bottom: 16px;
     }
   }
-  .tagsContainer{
-    display: block;
-    width:100%;
-    border-top:0.1em solid rgb(240, 240, 240);
-    margin-top: 8px;
-    padding-top: 8px;
-    span {
-      color:grey;
-    }
-    button {
-      border:none;
-      background-color: #fff;
-      height:10px;
-      width:10px;
-      &:hover{
-        cursor: pointer;
-      }
-    }
+  .tasks-container {
+    align-content: center;
+    flex-flow: column wrap;
+    width:65%;
   }
   .search-label, .sort-label {
     display: none;
@@ -120,15 +83,6 @@
   .tasks-container {
     width: 100%;
   }
-  .task-tags-container {
-    width: 100%;
-  }
-}
-@media screen and (max-width:500px){
-  .addTags {
-    &:before {
-      content: 'Add tag'
-    }
-  }
+
 }
 
