--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,12 @@
     box-sizing: border-box;
 }
 
+input[type=search]{
+    -moz-appearance: none;/* older firefox */
+    -webkit-appearance: none; /* safari, chrome, edge and ie mobile */
+    appearance: none; /* rest */
+}
+
 .title {
     font-size: 24px;
     font-weight: 500;
