--- a/src/constants/constants.scss
+++ b/src/constants/constants.scss
@@ -1,4 +1,4 @@
-$priority-color-low: #65B688;
-$priority-color-middle: #ffc011;
-$priority-color-high: #D65C4F;
+$low: #65B688;
+$middle: #ffc011;
+$high: #D65C4F;
 
