--- a/src/components/ModalForm/ModalForm.scss
+++ b/src/components/ModalForm/ModalForm.scss
@@ -45,7 +45,8 @@
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   flex-direction: column;
-  font-family: Roboto, sans-serif
+  font-family: Roboto, sans-serif;
+  overflow: auto;
 }
 
 .modal-header {
