--- a/src/components/NavTabs/NavTabs.scss
+++ b/src/components/NavTabs/NavTabs.scss
@@ -13,43 +13,43 @@
 .nav-item {
   display: inline-block;
   padding: 11px 0;
-}
 
-.nav-item a {
-  text-decoration: none;
-  font-weight: 600;
-  color: #333;
-  padding: 11px 15px;
-  cursor: pointer;
-  border: 1px solid transparent;
-}
+  i {
+    margin-right: 5px;
+  }
 
-.nav-item a:hover {
-  border-color: #e5e5e5;
-  color: #676767;
-  background-color: #fefefe;
+  a {
+    text-decoration: none;
+    font-weight: 600;
+    color: #333;
+    padding: 11px 15px;
+    cursor: pointer;
+    border: 1px solid transparent;
+
+    &:hover {
+      border-color: #e5e5e5;
+      color: #676767;
+      background-color: #fefefe;
+    }
+  }
 }
 
 .nav-item.active a{
   color: #428BCA;
   border: 1px solid #ddd;
   border-bottom-color: white;
-  border-top-color: #D65C4F;
-}
+  border-top-color: $high;
 
-.nav-item.active a:hover {
-  color: #428BCA;
-  border: 1px solid #ddd;
-  border-bottom-color: transparent;
-  border-top-color: #D65C4F;
-}
-
-.nav-item i {
-  margin-right: 5px;
+  &:hover {
+    color: #428BCA;
+    border: 1px solid #ddd;
+    border-bottom-color: transparent;
+    border-top-color: $high;
+  }
 }
 
 .amount {
-  background-color: #D65C4F;
+  background-color: $high;
   border-radius: 2px;
   margin-left: 5px;
   color: white;
