--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -4,56 +4,52 @@
   position: absolute;
   top: 0;
   left: 0;
-  height: 120%;
+  height: 100%;
   min-height: 100vh;
   z-index: 10;
   font-size: 14px;
-}
 
-.user-menu a {
-  padding: 18px 16px;
-  display: block;
-  width: 100%;
-  background: url(../../images/nav_arrow_right.png) no-repeat 228px;
-}
+  .user-menu {
+    background-color: #2D3A42;
+    display: flex;
+    justify-content: space-evenly;
+    position: relative;
 
-.user-menu {
-  background-color: #2D3A42;
-  display: flex;
-  justify-content: space-evenly;
-  position: relative;
-}
+    .togglePopupProfile {
+      color: white;
+      text-decoration: none;
 
-.user-info {
-  display: inline-block;
-  text-align: center;
-}
+      img {
+        width: 48px;
+        display: inline-block;
+        vertical-align: sub;
+        margin-right: 5px;
+      }
+    }
 
-.togglePopupProfile img {
-  width: 48px;
-  display: inline-block;
-  vertical-align: sub;
-  margin-right: 5px;
-}
+    a {
+      padding: 18px 16px;
+      display: block;
+      width: 100%;
+      background: url(../../images/nav_arrow_right.png) no-repeat 228px;
+    }
 
-.togglePopupProfile {
-  color: white;
-  text-decoration: none;
-}
+    .user-info {
+      display: inline-block;
+      text-align: center;
 
-.user-info span {
-  font-size: 11px;
-  color: #999;
-  display: block;
-  margin: 2px 0 0 0;
+      span {
+        font-size: 11px;
+        color: #999;
+        display: block;
+        margin: 2px 0 0 0;
+      }
+    }
+  }
 }
 
 .sidebar.active{
   left: -211px;
-
-  .user-info {
-    display: none;
-  }
 
   .user-menu {
     a {
@@ -61,8 +57,13 @@
       background: none;
       text-align: right;
     }
+
     .user-popup:before {
       top: 10px;
+    }
+
+    .user-info {
+      display: none;
     }
   }
 
