footer styled, filter fixed

--- a/src/components/ToDoList/ToDoList.scss
+++ b/src/components/ToDoList/ToDoList.scss
@@ -1,5 +1,6 @@
 .todo-list-tools {
   margin: 35px;
+  margin-bottom: 20px;
   display: flex;
   justify-content: space-between;
 }
@@ -70,5 +71,6 @@
 
 .select-deadline {
   font-size: 18px;
+  height: 40px;
 }
 
