--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -3,7 +3,10 @@
   padding: 12px 0;
   font-size: 12px;
   color: #777;
-  margin-top: 20%;
+  width: 100%;
+  bottom: 0;
+  position: absolute;
+  margin: 0 25px 0 265px;
 
   .footer-author {
     font-weight: 600;
