--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -22,6 +22,7 @@
       background-color: rgba(0, 0, 0, 0.2);
       height: 29px;
       cursor: pointer;
+      color: white;
     }
   }
   .navbar-greeting {
