--- a/src/components/PageContainer/PageContainer.scss
+++ b/src/components/PageContainer/PageContainer.scss
@@ -1,10 +1,12 @@
 .main-block {
   position: relative;
+  min-height: 500px;
 }
 
 .page-content {
   margin: 0 25px 0 265px;
   position: relative;
+  min-height: 100vh;
   font-size: 14px;
 
   .page-header {
