--- a/src/media.scss
+++ b/src/media.scss
@@ -40,11 +40,11 @@
       background: #3A4B55;
     }
   }
-}
 
-//@media screen and (max-width:880px) {
-//
-//}
+  .footer {
+    margin: 0 25px 0 55px;
+  }
+}
 
 @media screen and (max-width:800px) {
 
@@ -92,6 +92,8 @@
 @media screen and (max-width:730px){
   .tasks-container {
     width: 100%;
+    justify-content: center;
+    align-items: center;
   }
 }
 
